--- a/package.json
+++ b/package.json
@@ -14,62 +14,19 @@
     "start": "docker compose up -d",
     "stop": "docker compose down",
     "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
-    "test-local-or-ci": "npm-run-all -s test:*",
-    "test:config": "jest --rootDir=test",
-    "test:american-british-translator": "cd apps/american-british-translator && npm run test",
-    "test:anonymous-message-board": "cd apps/anonymous-message-board && cp sample.env .env && npm run test",
-    "test:exercise-tracker": "cd apps/exercise-tracker && cp sample.env .env && npm run test",
-    "test:file-metadata-microservice": "cd apps/file-metadata-microservice && npm run test",
-    "test:forum-proxy": "cd apps/forum-proxy && npm run test",
-    "test:issue-tracker": "cd apps/issue-tracker && cp sample.env .env && npm run test",
-    "test:manage-a-book-trading-club": "cd apps/manage-a-book-trading-club && cp sample.env .env && npm run test",
-    "test:metric-imperial-converter": "cd apps/metric-imperial-converter && npm run test",
-    "test:personal-library": "cd apps/personal-library && cp sample.env .env && npm run test",
-    "test:request-header-parser-microservice": "cd apps/request-header-parser-microservice && npm run test",
-    "test:secure-real-time-multiplayer-game": "cd apps/secure-real-time-multiplayer-game && npm run test",
-    "test:stock-price-checker": "cd apps/stock-price-checker && cp sample.env .env && npm run test",
-    "test:sudoku-solver": "cd apps/sudoku-solver && npm run test",
-    "test:timestamp-microservice": "cd apps/timestamp-microservice && npm run test",
-    "test:url-shortener-microservice": "cd apps/url-shortener-microservice && cp sample.env .env && npm run test",
-    "__comment": "These don't currently have actual tests, but will assert the server starts.",
-    "pretest:build-a-pinterest-clone": "cd apps/build-a-pinterest-clone && cp sample.env .env",
-    "test:build-a-pinterest-clone": "node test-server-starts.js apps/build-a-pinterest-clone",
-    "test:chart-the-stock-market": "node test-server-starts.js apps/chart-the-stock-market",
-    "pretest:image-search-abstraction-layer": "cd apps/image-search-abstraction-layer && cp sample.env .env",
-    "test:image-search-abstraction-layer": "node test-server-starts.js apps/image-search-abstraction-layer",
-    "test:p2p-video-chat-application": "node test-server-starts.js apps/p2p-video-chat-application",
-    "pretest:voting-app": "cd apps/voting-app && cp sample.env .env",
-    "test:voting-app": "node test-server-starts.js apps/voting-app",
-    "test:tribute-page": "node test-server-starts.js apps/tribute-page",
-    "test:survey-form": "node test-server-starts.js apps/survey-form",
-    "test:product-landing-page": "node test-server-starts.js apps/product-landing-page",
-    "test:technical-documentation-page": "node test-server-starts.js apps/technical-documentation-page",
-    "test:bar-chart": "node test-server-starts.js apps/bar-chart",
-    "test:scatterplot-graph": "node test-server-starts.js apps/scatterplot-graph",
-    "test:heat-map": "node test-server-starts.js apps/heat-map",
-    "test:choropleth-map": "node test-server-starts.js apps/choropleth-map",
-    "test:treemap-diagram": "node test-server-starts.js apps/treemap-diagram",
-    "test:random-quote-machine": "node test-server-starts.js apps/random-quote-machine",
-    "pretest:markdown-previewer": "cd apps/markdown-previewer && cp sample.env .env",
-    "test:markdown-previewer": "node test-server-starts.js apps/markdown-previewer",
-    "pretest:drum-machine": "cd apps/drum-machine && cp sample.env .env",
-    "test:drum-machine": "node test-server-starts.js apps/drum-machine",
-    "pretest:javascript-calculator": "cd apps/javascript-calculator && cp sample.env .env",
-    "test:javascript-calculator": "node test-server-starts.js apps/javascript-calculator",
-    "pretest:25--5-clock": "cd apps/25--5-clock && cp sample.env .env",
-    "test:25--5-clock": "node test-server-starts.js apps/25--5-clock"
+    "test-local-or-ci": "jest"
   },
   "devDependencies": {
+    "axios": "^1.3.3",
     "concurrently": "7.6.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-react": "7.32.2",
-    "jest": "27.5.1",
+    "jest": "29.4.2",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.7",
     "wait-port": "0.3.1"
   },
   "dependencies": {
-    "dotenv": "14.3.2",
-    "node-fetch": "3.3.1"
+    "dotenv": "14.3.2"
   }
 }
