--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-local-or-ci": "jest"
   },
   "devDependencies": {
-    "axios": "^1.3.3",
+    "axios": "1.3.3",
     "concurrently": "7.6.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-react": "7.32.2",
