--- a/package.json
+++ b/package.json
@@ -13,20 +13,13 @@
     "build": "docker compose build",
     "start": "docker compose up -d",
     "stop": "docker compose down",
-    "test": "echo 'The test suite is meant to run locally or in a CI environment. \u001b[31mDo NOT run this in production.\u001b[37m If you intend to run the tests, use \"npm run test-local-or-ci\".'",
-    "test-local-or-ci": "jest"
+    "test": "jest"
   },
   "devDependencies": {
     "axios": "1.3.3",
-    "concurrently": "7.6.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-react": "7.32.2",
     "jest": "29.4.2",
-    "npm-run-all": "4.1.5",
-    "prettier": "2.8.7",
-    "wait-port": "0.3.1"
-  },
-  "dependencies": {
-    "dotenv": "14.3.2"
+    "prettier": "2.8.7"
   }
 }
