--- a/sample.env
+++ b/sample.env
@@ -3,39 +3,39 @@
 ####################################################
 
 # Anonymous Message Board
-ANONYMOUS_MESSAGE_BOARD_DB_URI=uri_from_mongo_atlas
+ANONYMOUS_MESSAGE_BOARD_DB_URI=mongodb://mongo:27017/anonymous-message-board
 
 # Build a Pinterest Clone
 BUILD_A_PINTEREST_CLONE_GITHUB_KEY=api_key_from_github_dashboard
 BUILD_A_PINTEREST_CLONE_GITHUB_SECRET=secret_from_github_dashboard
-BUILD_A_PINTEREST_CLONE_DB_URI=uri_from_mongo_atlas
+BUILD_A_PINTEREST_CLONE_DB_URI=mongodb://mongo:27017/build-a-pinterest-clone
 BUILD_A_PINTEREST_CLONE_APP_URL=http://localhost:3000
 
 # Chart the Stock Market
 CHART_THE_STOCK_MARKET_APIKEY=api_key_from_alpha_vantage_dashboard
 
 # Exercise Tracker
-EXERCISE_TRACKER_DB_URI=uri_from_mongo_atlas
+EXERCISE_TRACKER_DB_URI=mongodb://mongo:27017/exercise-tracker
 
 # Image Search Abstraction Layer
-IMAGE_SEARCH_ABSTRACTION_LAYER_MONGO_URI=uri_from_mongo_atlas
+IMAGE_SEARCH_ABSTRACTION_LAYER_MONGO_URI=mongodb://mongo:27017/image-search-abstraction-layer
 IMAGE_SEARCH_ABSTRACTION_LAYER_CSEID=cseid_from_google_dashboard
 IMAGE_SEARCH_ABSTRACTION_LAYER_APIKEY=api_key_from_google_dashboard
 
 # Issue Tracker
-ISSUE_TRACKER_DB=uri_from_mongo_atlas
+ISSUE_TRACKER_DB=mongodb://mongo:27017/issue-tracker
 
 # Manage a Book Trading Club
 MANAGE_A_BOOK_TRADING_CLUB_GITHUB_KEY=api_key_from_github_dashboard
 MANAGE_A_BOOK_TRADING_CLUB_GITHUB_SECRET=secret_from_github_dashboard
-MANAGE_A_BOOK_TRADING_CLUB_MONGO_URI=uri_from_mongo_atlas
+MANAGE_A_BOOK_TRADING_CLUB_MONGO_URI=mongodb://mongo:27017/manage-a-book-trading-club
 MANAGE_A_BOOK_TRADING_CLUB_APP_URL=http://localhost:3000
 
 # Personal Library
-PERSONAL_LIBRARY_DB=uri_from_mongo_atlas
+PERSONAL_LIBRARY_DB=mongodb://mongo:27017/personal-library
 
 # Stock Price Checker
-STOCK_PRICE_CHECKER_DB_URI=uri_from_mongo_atlas
+STOCK_PRICE_CHECKER_DB_URI=mongodb://mongo:27017/stock-price-checker
 
 # Stock Price Checker Proxy
 STOCK_PRICE_CHECKER_PROXY_CACHE_TTL_MINUTES=30
@@ -46,10 +46,10 @@ TWITCH_PROXY_TWITCH_CLIENT_ID=client_id_from_twitch_dashboard
 TWITCH_PROXY_TWITCH_CLIENT_SECRET=client_secret_from_twitch_dashboard
 
 # URL Shortener Microservice
-URL_SHORTENER_MICROSERVICE_DB_URI=uri_from_mongo_atlas
+URL_SHORTENER_MICROSERVICE_DB_URI=mongodb://mongo:27017/url-shortener-microservice
 
 # Voting App
-VOTING_APP_MONGO_URI=uri_from_mongo_atlas
+VOTING_APP_MONGO_URI=mongodb://mongo:27017/voting-app
 
 # Weather Proxy
 WEATHER_PROXY_OPEN_WEATHER_API_KEY=api_key_open_weather_api
