--- a/apps/random-quote-machine/package.json
+++ b/apps/random-quote-machine/package.json
@@ -4,8 +4,7 @@
   "description": "Front end project for freeCodeCamp",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "wait-port -t 10000 3000"
+    "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "16.0.0",
