fix: update action to use npm scripts, build without a cache

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -33,7 +33,9 @@ jobs:
         run: cp sample.env .env
 
       - name: Start Projects
-        run: docker compose up -d
+        run: |
+          npm run build -- --no-cache
+          npm start
 
       - name: Sleep For 15 Seconds
         run: sleep 15
